[package]
name = "spynode"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.1.2"
solana-gossip = "2.1.2"
solana-sdk = "2.1.2"
solana-streamer = "2.1.2"
solana-net-utils = "2.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"